# plasma-kraidmonitor

./: CMakeLists.txt  README.md
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: configGeneral.qml  main.qml
plugin/: kraidmonitor.cpp  kraidmonitor.h  qmldir
